--- a/public_html/css/index.css
+++ b/public_html/css/index.css
@@ -9,14 +9,9 @@ and open the template in the editor.
 */
 
 #mainContainer {
+    background-image: url("../img/fondo.png");
+    background-size: 100% 100%;
     height: 768px;
+    margin: 0px 0px 0px 0px;
     width: 1024px;
-    margin: 0px;
-}
-
-#mainContainer img {
-    max-width:100%; 
-    max-height:100%;
-    margin:0px;
-    display:block;
 }
